<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:padding="8dp">

    <TextView
        android:id="@+id/textViewCity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="City Name"
        android:textSize="18sp" />

    <Button
        android:id="@+id/buttonShowWeather"
        android:layout_width="40dp"
        android:layout_height="wrap_content"
        app:iconPadding="0dp"
        app:iconGravity="textStart"
        app:icon="@drawable/partly_cloudy_day" />

    <Button
        android:id="@+id/buttonShowMap"
        android:layout_width="40dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        app:iconPadding="0dp"
        app:iconGravity="textStart"
        app:icon="@drawable/map" />

    <Button
        android:id="@+id/buttonDelete"
        android:layout_width="40dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        app:iconPadding="0dp"
        app:iconGravity="textStart"
        app:icon="@drawable/delete" />
</LinearLayout>